--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^7.1.6",
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
+    "@tanstack/react-query": "^5.83.0",
     "axios": "^1.10.0",
     "expo": "~53.0.17",
     "expo-blur": "~14.1.5",
